Replaced dependancy on Sun base64 Encoder/Decoder with java.util for compatibility Added docker file to automate building and deploying the application from a prebuilt jar in target.